--- a/group_vars/scm_server.yml
+++ b/group_vars/scm_server.yml
@@ -1,14 +1,20 @@
 ---
 
-scm_version: 5.8.3
+scm_version: 5.12.2
 scm_port: 7180
 scm_default_user: admin
 scm_default_pass: admin
 
 scm_repositories:
-  - http://archive.cloudera.com/cdh5/parcels/5.8.3/
+  - http://archive.cloudera.com/cdh5/parcels/{latest_supported}
   - https://archive.cloudera.com/cdh5/parcels/{latest_supported}/
+  - https://archive.cloudera.com/kafka/parcels/3.0.0.40/
+  - https://archive.cloudera.com/spark2/parcels/2.2.0.cloudera
 
 scm_products:
   - product: CDH
-    version: 5.8.3-1.cdh5.8.3.p0.2
+    version: 5.12.2-1.cdh5.12.2.p0.4
+  - product: KAFKA
+    version: 3.0.0-1.3.0.0.p0.40
+  - product: SPARK2
+    version: 2.2.0.cloudera2-1.cdh5.12.0.p0.232957
